<resources>
    <string name="app_name">Candle App</string>


    <string name="shared_preference">com.ahmed.m.hassaan.MyPref</string>
    <string name="landing_shared_preference_key">com.ahmed.m.hassaan.candleap.slides_shared_preferences_key</string>
    <string name="shoing_show_case">com.ahmed.m.hassaan.candleap.showcase_shared_preferences_key</string>

    <string name="empty_string">empty</string>
    <string name="dynamicbox_retry">اعد المحاولة</string>

    <string name="dynamicbox_loading_title" />
    <string name="dynamicbox_loading_message">يرجي الإنتظار</string>

    <string name="dynamicbox_internet_off_title">لا يوجد انترنت</string>
    <string name="dynamicbox_internet_off_message">غير قادر علي الإتصال بالسيرفر</string>

    <string name="dynamicbox_exception_title">Error</string>
    <string name="dynamicbox_exception_message">An error has occurred, retry again</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="newMessage">New Message</string>
    <string name="errorHappened">Error Occurred</string>
    <string name="cannot_connect_server">Can\'t Conect The Server</string>
    <string name="notSuccessfulResponse">Not Successful Response</string>

    <string name="timestamp_format">yyyy-MM-dd kk:mm:ss</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="savedSuccessfully">Saved Successfully</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="text_operation_based_app">Text Operation Based App</string>
    <string name="start">Start</string>

    <string name="copy_rights">  All Rights Reserved To Candle App  \u00A9 2021</string>
    <string name="slide_1_title">Mind Map Generator</string>
    <string name="slide_2_title">Reading Articles</string>
    <string name="slide_3_title">Text Summarization</string>
    <string name="slide_1_description">Generating Mind Map From Articles Automatically</string>
    <string name="slide_2_description">Reading Uploaded Articles Online &amp; Offline </string>
    <string name="slide_3_description">Summarize Articles Automatically For Any Uploaded Article</string>
    <string name="upload">Upload</string>
    <string name="from_text">From Text</string>
    <string name="from_file">From File</string>
    <string name="apply">Apply</string>
    <string name="enter_text_to_be_summarized">Enter Text To Be Summarized</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_name">File Name :</string>
    <string name="file_size">File Size :</string>
    <string name="choose_file">Choose File</string>
    <string name="file_output_text">File output Text </string>
    <string name="changeFile">Change</string>
    <string name="ratio">Ratio : </string>
    <string name="result_is_ready_to_be_shown">Result is Ready To Be Shown</string>
    <string name="show_result">Show Result</string>
    <string name="retry">Retry</string>
    <string name="preview">Preview</string>
    <string name="article_words_count">Article Words Count :</string>
    <string name="article_analysis">Article Analysis :</string>
    <string name="summarized_words_count">Summarized Words Count :</string>
    <string name="summarized_article">Summarized Article :</string>
    <string name="images">Images</string>
    <string name="word_cloud">Word Cloud :</string>
    <string name="mind_map">Mind Map :</string>
    <string name="save">Save</string>
    <string name="no_article_founded">"No Article Found "</string>
    <string name="some_data_not_founded">Some Data is Not Founded</string>
    <string name="_0_0">0.0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="show_result_anyway">Result Not Completely Successful\n Show AnyWay </string>
    <string name="control_of_summary_size_using_ratio">Control Of Summary Size Using Ratio</string>
    <string name="dont_show_again">Don\'t Show Again</string>
    <string name="show">Show</string>
    <string name="help_ended">Help Trip is ended , Show Again ?</string>
    <string name="help">Help</string>
    <string name="required_permission">Required Permission</string>
    <string name="storeage_permission_hints">We Need This Permision To Start Files Summarizations</string>
    <string name="give_permission">Give Permission</string>
    <string name="process_in_progress">Process is in progress</string>
    <string name="ignore_current_process">Ignore Current Progress  Any where?</string>
    <string name="stay_here">Stay Here</string>
    <string name="go_any_way">Go Any Way</string>
    <string name="restart_trip">Restart Trip</string>
    <string name="open_sittings_and_give_permission">\"Open Setting and Give us The Permission \"</string>
</resources>