<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/gray"
    android:gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal|clip_vertical|clip_horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/exception_wrapper"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" >

            <TextView
                android:fontFamily="@font/font1"
                android:id="@+id/exception_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/exception.title"
                android:text="@string/dynamicbox_exception_title" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/font1"
                    android:id="@+id/exception_message"
                    style="@style/exception.message"
                    android:text="@string/dynamicbox_exception_message" />

            </androidx.core.widget.NestedScrollView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <Button
                    android:fontFamily="@font/font1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_click"
                    android:text="@string/dynamicbox_retry"
                    android:textColor="@color/white"
                    android:id="@+id/exception_button"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>