<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal|clip_vertical|clip_horizontal">

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:id="@+id/exception_wrapper"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:id="@+id/exception_title"
                style="@style/exception.title"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamicbox_internet_off_title" />

            <TextView
                android:id="@+id/exception_message"
                style="@style/exception.message"
                android:textColor="@color/white"
                android:text="@string/dynamicbox_internet_off_message" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/_20sdp"
            app:contentPadding="@dimen/_5sdp"
            android:layout_below="@+id/exception_wrapper"
            android:layout_centerHorizontal="true"
            >

            <Button
                android:fontFamily="@font/font1"
                android:layout_width="match_parent"
                android:padding="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:text="@string/dynamicbox_retry"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:id="@+id/exception_button"
                android:background="@drawable/ripple_click"
                 />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>