<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.upload.UploadArticleActivity">


        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:id="@+id/tab1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="-35dp"
                android:background="@drawable/tab_background"
                android:elevation="@dimen/_5sdp"
                android:onClick="@{v->listener.onClick(v)}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/from_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/appBar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/tab_background2"
                android:onClick="@{v->listener.onClick(v)}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/from_file"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratio"
            android:id="@+id/lblRatioHint"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tabs"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/lblRatioHint"
            android:layout_toRightOf="@id/lblRatioHint"
            android:max="10"
            android:layout_toLeftOf="@id/btnHelp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:id="@+id/seekbarRatio"
            android:layout_marginTop="@dimen/_5sdp"

            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/lblRatioHint"
            android:id="@+id/btnHelp"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnApply"
            android:layout_below="@id/lblRatioHint"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <EditText
                android:id="@+id/txtInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/enter_text_to_be_summarized"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/btn_shape"
            android:text="@string/apply"
            android:textSize="@dimen/_16ssp"
            android:onClick="@{v->listener.onClick(v)}"
            app:backgroundTint="@color/colorAccent" />


    </RelativeLayout>


</layout>