<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="image"
            type="int" />

        <!--        <variable-->
        <!--            name="position"-->
        <!--            type="int" />-->

        <!--        <variable-->
        <!--            name="typeFace"-->
        <!--            type="" />-->

        <variable
            name="title"
            type="String" />

        <variable
            name="desc"
            type="String" />

        <variable
            name="listener"
            type="com.ahmed.m.hassaan.candleapp.ui.splash.SliderAdapter.OnSlideButtonsClickedListener" />


    </data>

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="parent">

        <RelativeLayout
            android:id="@+id/regularLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:background="@drawable/landing_background"
            tools:visibility="gone">

            <!--            <androidx.cardview.widget.CardView-->
            <!--                android:id="@+id/slideImgLayout"-->
            <!--                android:layout_width="@dimen/_300sdp"-->
            <!--                android:layout_height="@dimen/_300sdp"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:layout_centerHorizontal="true"-->
            <!--                android:layout_marginLeft="@dimen/_10sdp"-->
            <!--                android:layout_marginTop="@dimen/_30sdp"-->
            <!--                android:layout_marginRight="@dimen/_10sdp"-->
            <!--                android:layout_marginBottom="@dimen/_20sdp"-->
            <!--                -->
            <!--                app:cardCornerRadius="@dimen/_10sdp"-->

            <!--                app:contentPadding="@dimen/_5sdp">-->

            <ImageView
                android:id="@+id/slideImg"
                imgBase64String="@{image}"
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_300sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:contentDescription="@null"
                tools:src="@drawable/ic_text_summerization" />

            <!--            </androidx.cardview.widget.CardView>-->

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/slideImg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center|top"
                android:text="@{title}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_25ssp"

                android:textStyle="bold"
                tools:text="العنوان" />

            <TextView
                android:id="@+id/lblDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@{desc}"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                tools:text="هنا يظهر الديسكريبشان بتاع الايتم" />


            <TextView
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:onClick="@{(v)->listener.skip()}"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />


            <TextView
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:onClick="@{(v)->listener.next()}"
                android:text="@string/next"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15ssp"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/startLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:background="@drawable/landing_background"
            tools:visibility="visible">


            <TextView
                android:id="@+id/lblName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignTop="@id/lblName"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_toRightOf="@id/lblName"
                android:contentDescription="@null"
                android:src="@drawable/ic_logo" />
            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblName"
                android:layout_centerHorizontal="true"
                android:text="@string/text_operation_based_app"
                android:textColor="@color/white"

                />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_above="@id/btnStart"
                android:layout_below="@id/desc"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_10sdp"

                android:layout_marginBottom="@dimen/_30sdp"
                android:contentDescription="@null"
                android:src="@drawable/ic_logo" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/btnStart"
                style="@style/loadingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/lblCopyRights"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/btn_shape"
                android:drawableRight="@drawable/ic_arrow_right"
                android:fontFamily="@font/font1"
                android:onClick="@{(v)->listener.getStarted()}"
                android:text="@string/start"
                android:textColor="@color/white"
                app:drawableTint="@color/white"
                android:backgroundTint="@color/colorAccent"/>

            <TextView
                android:id="@+id/lblCopyRights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_2sdp"
                android:text="@string/copy_rights"
                android:textColor="@color/light_white2" />

        </RelativeLayout>

    </RelativeLayout>
</layout>